@@ -2,6 +2,7 @@ package com.tokubase.service;
 
 import com.tokubase.dto.form.CreateFormRequest;
 import com.tokubase.dto.form.FormResponseDTO;
+import com.tokubase.exception.DuplicateResourceException;
 import com.tokubase.exception.ResourceNotFoundException;
 import com.tokubase.mapper.FormMapper;
 import com.tokubase.model.Character;
@@ -10,66 +11,90 @@ import com.tokubase.repository.CharacterRepository;
 import com.tokubase.repository.FormRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class FormServiceImpl implements FormService {
 
-    private final FormRepository formRepository;
+    private final FormRepository      formRepository;
     private final CharacterRepository characterRepository;
 
     @Override
+    @Transactional
     public FormResponseDTO createForm(CreateFormRequest request) {
-        Character character = characterRepository.findById(request.getCharacterId())
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Character not found with id: " + request.getCharacterId()));
+        Character character = findCharacterOrThrow(request.getCharacterId());
 
-        Form form = FormMapper.toEntity(request, character);
-        Form saved = formRepository.save(form);
+        if (formRepository.existsByNameAndCharacterId(request.getName(), request.getCharacterId())) {
+            throw new DuplicateResourceException(
+                    "Form '" + request.getName() + "' already exists for this character");
+        }
 
+        Form saved = formRepository.save(FormMapper.toEntity(request, character));
         return FormMapper.toDTO(saved);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public FormResponseDTO getFormById(Long id) {
-        Form form = formRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Form not found with id: " + id));
-        return FormMapper.toDTO(form);
+        return FormMapper.toDTO(findFormOrThrow(id));
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<FormResponseDTO> getFormsByCharacter(Long characterId) {
-        // Verify character exists
-        characterRepository.findById(characterId)
-                .orElseThrow(() -> new ResourceNotFoundException("Character not found with id: " + characterId));
-
+        findCharacterOrThrow(characterId);
         return formRepository.findByCharacterId(characterId).stream()
-                .map(form -> (Form) form)
                 .map(FormMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<FormResponseDTO> getFinalFormsByCharacter(Long characterId) {
-        // Verify character exists
-        characterRepository.findById(characterId)
-                .orElseThrow(() -> new ResourceNotFoundException("Character not found with id: " + characterId));
-
-        return formRepository.findByCharacterId(characterId).stream()
-                .map(form -> (Form) form)
-                .filter(form -> form.getIsFinalForm())
+        findCharacterOrThrow(characterId);
+        return formRepository.findByCharacterIdAndIsFinalFormTrue(characterId).stream()
                 .map(FormMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional
+    public FormResponseDTO updateForm(Long id, CreateFormRequest request) {
+        Form form = findFormOrThrow(id);
+
+        // If character is changing, validate the new character exists
+        if (request.getCharacterId() != null
+                && !request.getCharacterId().equals(form.getCharacter().getId())) {
+            Character newCharacter = findCharacterOrThrow(request.getCharacterId());
+            form.setCharacter(newCharacter);
+        }
+
+        FormMapper.applyUpdate(request, form);
+        return FormMapper.toDTO(formRepository.save(form));
+    }
+
+    @Override
+    @Transactional
     public void deleteForm(Long id) {
         if (!formRepository.existsById(id)) {
             throw new ResourceNotFoundException("Form not found with id: " + id);
         }
         formRepository.deleteById(id);
+    }
+
+    // ── Helpers ───────────────────────────────────────────────────────────
+
+    private Form findFormOrThrow(Long id) {
+        return formRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Form not found with id: " + id));
+    }
+
+    private Character findCharacterOrThrow(Long characterId) {
+        return characterRepository.findById(characterId)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "Character not found with id: " + characterId));
     }
 }
